Add styles and scripts for taskboard page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <link rel="stylesheet" href="/assets/v1.css">
+<% end %>
 <div class="page">
   <div class="page-content container-fluid">
     <div class="row" data-plugin="matchHeight" data-by-row="true">
