--- a/app/views/home/taskboard.html.erb
+++ b/app/views/home/taskboard.html.erb
@@ -1,3 +1,21 @@
+<% content_for :head do %>
+  <!-- Plugins For This Page -->
+  <link rel="stylesheet" href="/assets/bootstrap-select/bootstrap-select.min.css?v4.0.2">
+  <link rel="stylesheet" href="/assets/jquery-selective/jquery-selective.min.css?v4.0.2">
+  <link rel="stylesheet" href="/assets/bootstrap-datepicker/bootstrap-datepicker.min.css?v4.0.2">
+  <link rel="stylesheet" href="/assets/bootstrap-markdown/bootstrap-markdown.min.css?v4.0.2">
+
+  <!-- Page -->
+  <link rel="stylesheet" href="/assets/taskboard.min.css?v4.0.2">
+<% end %>
+<% content_for :page_scripts do %>
+  <script src="/assets/jquery-ui/jquery-ui.min.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-select/bootstrap-select.min.js?v4.0.2"></script>
+  <script src="/assets/jquery-selective/jquery-selective.min.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-datepicker/bootstrap-datepicker.min.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-markdown/bootstrap-markdown.js?v4.0.2"></script>
+  <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
+<% end %>
 <div class="page">
   <div class="page-header">
     <h1 class="page-title">TaskBoard</h1>
