Fix taskboard page

--- a/app/views/home/contacts.html.erb
+++ b/app/views/home/contacts.html.erb
@@ -1,3 +1,16 @@
+<% content_for :head do %>
+  <!-- Page -->
+  <link rel="stylesheet" href="/assets/contacts.min.css?v4.0.2">
+<% end %>
+<% content_for :plugins do %>
+  <script src="/assets/slidepanel/jquery-slidePanel.min.js?v4.0.2"></script>
+  <script src="/assets/aspaginator/jquery-asPaginator.min.js?v4.0.2"></script>
+  <script src="/assets/jquery-placeholder/jquery.placeholder.js?v4.0.2"></script>
+  <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
+<% end %>
+<% content_for :page_scripts do %>
+<% end %>
+<div class="page">
 <div class="page bg-white">
   <div class="page-aside">
     <!-- Contacts Sidebar -->
