--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,16 @@
 <% content_for :head do %>
   <link rel="stylesheet" href="/assets/v1.css">
 <% end %>
+<% content_for :page_scripts do %>
+  <script src="/assets/Site.js"></script>
+  <script src="/assets/Plugin/asscrollable.js"></script>
+  <script src="/assets/Plugin/slidepanel.js"></script>
+  <script src="/assets/Plugin/switchery.js"></script>
+  <script src="/assets/Plugin/matchheight.js"></script>
+  <script src="/assets/Plugin/jvectormap.js"></script>
+
+  <script src="/assets/v1.js"></script>
+<% end %>
 <div class="page">
   <div class="page-content container-fluid">
     <div class="row" data-plugin="matchHeight" data-by-row="true">
