--- a/app/views/home/taskboard.html.erb
+++ b/app/views/home/taskboard.html.erb
@@ -8,13 +8,28 @@
   <!-- Page -->
   <link rel="stylesheet" href="/assets/taskboard.min.css?v4.0.2">
 <% end %>
-<% content_for :page_scripts do %>
+<% content_for :plugins do %>
   <script src="/assets/jquery-ui/jquery-ui.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-select/bootstrap-select.min.js?v4.0.2"></script>
   <script src="/assets/jquery-selective/jquery-selective.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-datepicker/bootstrap-datepicker.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-markdown/bootstrap-markdown.js?v4.0.2"></script>
   <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
+<% end %>
+<% content_for :page_scripts do %>
+  <script src="/assets/Plugin/matchheight.js?v4.0.2"></script>
+  <script src="/assets/Plugin/jvectormap.js"></script>
+
+  <script src="/assets/Site.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-select/bootstrap-select.min.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-datepicker/bootstrap-datepicker.min.js?v4.0.2"></script>
+  <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
+  <script src="/assets/BaseApp.min.js?v4.0.2"></script>
+  <script src="/assets/Taskboard.min.js?v4.0.2"></script>
+  <script src="/assets/taskboard.min.js?v4.0.2"></script>
 <% end %>
 <div class="page">
   <div class="page-header">
