Add files for contacts

--- a/app/views/home/contacts.html.erb
+++ b/app/views/home/contacts.html.erb
@@ -9,6 +9,23 @@
   <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
 <% end %>
 <% content_for :page_scripts do %>
+  <script src="/assets/Site.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/sticky-header.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/action-btn.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asselectable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/editlist.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/aspaginator.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/animate-list.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/jquery-placeholder.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/material.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/selectable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/bootbox.min.js?v4.0.2"></script>
+  <script src="/assets/BaseApp.min.js?v4.0.2"></script>
+  <script src="/assets/App/Contacts.min.js?v4.0.2"></script>
+  <script src="/assets/contacts.min.js?v4.0.2"></script>
 <% end %>
 <div class="page">
 <div class="page bg-white">
