--- a/app/views/home/chartjs.html.erb
+++ b/app/views/home/chartjs.html.erb
@@ -1,3 +1,16 @@
+<% content_for :head do %>
+  <link rel="stylesheet" href="/assets/gauge-js/gauge.min.css?v4.0.2">
+<% end %>
+<% content_for :plugins do %>
+  <script src="/assets/charts/Chart.min.js?v4.0.2"></script>
+<% end %>
+<% content_for :page_scripts do %>
+  <script src="/assets/Site.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.min.js?v4.0.2"></script>
+  <script src="/assets/charts/chartjs.min.js?v4.0.2"></script>
+<% end %>
 <div class="page">
   <div class="page-header">
     <h1 class="page-title">Chart.js</h1>
