--- a/app/views/pages/settings.html.erb
+++ b/app/views/pages/settings.html.erb
@@ -2,14 +2,14 @@
 <head></head>
 <body>
   <ul>
-    <li><%= link_to 'Index', home_index_path %></li>
-    <li><%= link_to 'taskboard', home_taskboard_path %></li>
-    <li><%= link_to 'contacts', home_contacts_path %></li>
-    <li><%= link_to 'gauges', home_gauges_path %></li>
-    <li><%= link_to 'chartjs', home_chartjs_path %></li>
-    <li><%= link_to 'general', home_general_path %></li>
-    <li><%= link_to 'team', home_team_path %></li>
-    <li><%= link_to 'data', home_data_path %></li>
+    <li><%= link_to 'Index', index_path %></li>
+    <li><%= link_to 'taskboard', taskboard_path %></li>
+    <li><%= link_to 'contacts', contacts_path %></li>
+    <li><%= link_to 'gauges', gauges_path %></li>
+    <li><%= link_to 'chartjs', chartjs_path %></li>
+    <li><%= link_to 'general', general_path %></li>
+    <li><%= link_to 'team', team_path %></li>
+    <li><%= link_to 'data', data_path %></li>
   </ul>
 </body>
 </html>
