--- a/app/views/home/data.html.erb
+++ b/app/views/home/data.html.erb
@@ -1,3 +1,51 @@
+<% content_for :head do %>
+    <!-- Plugins For This Page -->
+  <link rel="stylesheet" href="/assets/tasklist/tasklist.min.css?v4.0.2">
+  <link rel="stylesheet" href="/assets/asscrollable/asScrollable.min.css?v4.0.2">
+
+  <!-- Page -->
+  <link rel="stylesheet" href="/assets/data.min.css?v4.0.2">
+<% end %>
+<% content_for :scripts do %>
+  <!-- Plugins -->
+  <script src="/assets/switchery.js"></script>
+  <script src="/assets/intro.js"></script>
+  <script src="/assets/screenfull.js"></script>
+  <script src="/assets/jquery-slidePanel.js"></script>
+
+  <!-- Plugins For This Page -->
+  <script src="/assets/peity/jquery.peity.min.js?v4.0.2"></script>
+  <script src="/assets/imagesloaded/imagesloaded.pkgd.min.js?v4.0.2"></script>
+  <script src="/assets/masonry/masonry.pkgd.min.js?v4.0.2"></script>
+
+  <!-- Scripts -->
+  <script src="/assets/Component.js"></script>
+  <script src="/assets/Plugin.js"></script>
+  <script src="/assets/Base.js"></script>
+  <script src="/assets/Config.js"></script>
+
+  <script src="/assets/Section/Menubar.js"></script>
+  <script src="/assets/Section/GridMenu.js"></script>
+  <script src="/assets/Section/Sidebar.js"></script>
+  <script src="/assets/Section/PageAside.js"></script>
+  <script src="/assets/Plugin/menu.js"></script>
+
+  <!-- Config -->
+  <script src="/assets/config/colors.js"></script>
+  <script src="/assets/config/tour.js"></script>
+  <script>Config.set('assets', '/assets');</script>
+
+  <!-- Page -->
+  <script src="/assets/Site.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/peity.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/tasklist.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/masonry.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/charts/peity.min.js?v4.0.2"></script>
+<% end %>
 <div class="page">
   <div class="page-header">
     <h1 class="page-title">Data Widgets</h1>
