--- a/app/views/home/general.html.erb
+++ b/app/views/home/general.html.erb
@@ -1,3 +1,40 @@
+<% content_for :head do %>
+<% end %>
+<% content_for :scripts do %>
+  <!-- Plugins -->
+  <script src="/assets/switchery.js"></script>
+  <script src="/assets/intro.js"></script>
+  <script src="/assets/screenfull.js"></script>
+  <script src="/assets/jquery-slidePanel.js"></script>
+
+  <!-- Plugins For This Page -->
+  <script src="/assets/jquery-placeholder/jquery.placeholder.js?v4.0.2"></script>
+
+  <!-- Scripts -->
+  <script src="/assets/Component.js"></script>
+  <script src="/assets/Plugin.js"></script>
+  <script src="/assets/Base.js"></script>
+  <script src="/assets/Config.js"></script>
+
+  <script src="/assets/Section/Menubar.js"></script>
+  <script src="/assets/Section/GridMenu.js"></script>
+  <script src="/assets/Section/Sidebar.js"></script>
+  <script src="/assets/Section/PageAside.js"></script>
+  <script src="/assets/Plugin/menu.js"></script>
+
+  <!-- Config -->
+  <script src="/assets/config/colors.js"></script>
+  <script src="/assets/config/tour.js"></script>
+  <script>Config.set('assets', '/assets');</script>
+
+  <!-- Page -->
+  <script src="/assets/Site.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/jquery-placeholder.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/input-group-file.min.js?v4.0.2"></script>
+<% end %>
 <div class="page">
   <div class="page-header">
     <h1 class="page-title">Form General Elements</h1>
