--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,50 @@
 <% content_for :head do %>
+  <!-- Plugins -->
+  <link rel="stylesheet" href="/assets/plugins/animsition.css">
+  <link rel="stylesheet" href="/assets/plugins/asScrollable.css">
+  <link rel="stylesheet" href="/assets/plugins/switchery.css">
+  <link rel="stylesheet" href="/assets/plugins/introjs.css">
+  <link rel="stylesheet" href="/assets/plugins/slidePanel.css">
+  <link rel="stylesheet" href="/assets/plugins/flag-icon.css">
+  <link rel="stylesheet" href="/assets/plugins/chartist.css">
+  <link rel="stylesheet" href="/assets/plugins/jquery-jvectormap.css">
+  <link rel="stylesheet" href="/assets/plugins/chartist-plugin-tooltip.css">
   <link rel="stylesheet" href="/assets/v1.css">
 <% end %>
-<% content_for :page_scripts do %>
+<% content_for :scripts do %>
+  <!-- Plugins -->
+  <script src="/assets/switchery.js"></script>
+  <script src="/assets/intro.js"></script>
+  <script src="/assets/screenfull.js"></script>
+  <script src="/assets/jquery-slidePanel.js"></script>
+
+  <!-- Plugins For This Page -->
+  <script src="/assets/skycons.js"></script>
+  <script src="/assets/chartist.min.js"></script>
+  <script src="/assets/chartist-plugin-tooltip.js"></script>
+  <script src="/assets/jquery-asPieProgress.min.js"></script>
+  <script src="/assets/jquery-jvectormap.min.js"></script>
+  <script src="/assets/jquery-jvectormap-au-mill-en.js"></script>
+  <script src="/assets/jquery.matchHeight-min.js"></script>
+
+  <!-- Scripts -->
+  <script src="/assets/Component.js"></script>
+  <script src="/assets/Plugin.js"></script>
+  <script src="/assets/Base.js"></script>
+  <script src="/assets/Config.js"></script>
+
+  <script src="/assets/Section/Menubar.js"></script>
+  <script src="/assets/Section/GridMenu.js"></script>
+  <script src="/assets/Section/Sidebar.js"></script>
+  <script src="/assets/Section/PageAside.js"></script>
+  <script src="/assets/Plugin/menu.js"></script>
+
+  <!-- Config -->
+  <script src="/assets/config/colors.js"></script>
+  <script src="/assets/config/tour.js"></script>
+  <script>Config.set('assets', '/assets');</script>
+
+  <!-- Page -->
   <script src="/assets/Site.js"></script>
   <script src="/assets/Plugin/asscrollable.js"></script>
   <script src="/assets/Plugin/slidepanel.js"></script>
@@ -9,7 +52,7 @@
   <script src="/assets/Plugin/matchheight.js"></script>
   <script src="/assets/Plugin/jvectormap.js"></script>
 
-  <script src="/assets/v1.js"></script>
+  <script src="/assets/v1.min.js"></script>
 <% end %>
 <div class="page">
   <div class="page-content container-fluid">
