--- a/app/views/home/taskboard.html.erb
+++ b/app/views/home/taskboard.html.erb
@@ -8,18 +8,33 @@
   <!-- Page -->
   <link rel="stylesheet" href="/assets/taskboard.min.css?v4.0.2">
 <% end %>
-<% content_for :plugins do %>
+<% content_for :scripts do %>
+  <!-- Plugins For This Page -->
   <script src="/assets/jquery-ui/jquery-ui.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-select/bootstrap-select.min.js?v4.0.2"></script>
   <script src="/assets/jquery-selective/jquery-selective.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-datepicker/bootstrap-datepicker.min.js?v4.0.2"></script>
   <script src="/assets/bootstrap-markdown/bootstrap-markdown.js?v4.0.2"></script>
   <script src="/assets/bootbox/bootbox.min.js?v4.0.2"></script>
-<% end %>
-<% content_for :page_scripts do %>
-  <script src="/assets/Plugin/matchheight.js?v4.0.2"></script>
-  <script src="/assets/Plugin/jvectormap.js"></script>
 
+  <!-- Scripts -->
+  <script src="/assets/Component.js"></script>
+  <script src="/assets/Plugin.js"></script>
+  <script src="/assets/Base.js"></script>
+  <script src="/assets/Config.js"></script>
+
+  <script src="/assets/Section/Menubar.js"></script>
+  <script src="/assets/Section/GridMenu.js"></script>
+  <script src="/assets/Section/Sidebar.js"></script>
+  <script src="/assets/Section/PageAside.js"></script>
+  <script src="/assets/Plugin/menu.js"></script>
+
+  <!-- Config -->
+  <script src="/assets/config/colors.js"></script>
+  <script src="/assets/config/tour.js"></script>
+  <script>Config.set('assets', '/assets');</script>
+
+  <!-- Page -->
   <script src="/assets/Site.js?v4.0.2"></script>
   <script src="/assets/Plugin/asscrollable.js?v4.0.2"></script>
   <script src="/assets/Plugin/slidepanel.js?v4.0.2"></script>
