--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -1,3 +1,49 @@
+<% content_for :head do %>
+  <link rel="stylesheet" href="/assets/team.min.css?v4.0.2">
+<% end %>
+<% content_for :scripts do %>
+  <!-- Plugins -->
+  <script src="/assets/switchery.js"></script>
+  <script src="/assets/intro.js"></script>
+  <script src="/assets/screenfull.js"></script>
+  <script src="/assets/jquery-slidePanel.js"></script>
+
+  <!-- Plugins For This Page -->
+  <script src="/assets/chartist/chartist.min.js?v4.0.2"></script>
+  <script src="/assets/chartist-plugin-tooltip/chartist-plugin-tooltip.min.js?v4.0.2"></script>
+  <script src="/assets/aspieprogress/jquery-asPieProgress.min.js?v4.0.2"></script>
+  <script src="/assets/matchheight/jquery.matchHeight-min.js?v4.0.2"></script>
+  <script src="/assets/jquery-selective/jquery-selective.min.js?v4.0.2"></script>
+  <script src="/assets/bootstrap-datepicker/bootstrap-datepicker.min.js?v4.0.2"></script>
+
+  <!-- Scripts -->
+  <script src="/assets/Component.js"></script>
+  <script src="/assets/Plugin.js"></script>
+  <script src="/assets/Base.js"></script>
+  <script src="/assets/Config.js"></script>
+
+  <script src="/assets/Section/Menubar.js"></script>
+  <script src="/assets/Section/GridMenu.js"></script>
+  <script src="/assets/Section/Sidebar.js"></script>
+  <script src="/assets/Section/PageAside.js"></script>
+  <script src="/assets/Plugin/menu.js"></script>
+
+  <!-- Config -->
+  <script src="/assets/config/colors.js"></script>
+  <script src="/assets/config/tour.js"></script>
+  <script>Config.set('assets', '/assets');</script>
+
+  <!-- Page -->
+  <script src="/assets/Site.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/slidepanel.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/switchery.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/matchheight.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/aspieprogress.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/bootstrap-datepicker.min.js?v4.0.2"></script>
+  <script src="/assets/Plugin/asscrollable.min.js?v4.0.2"></script>
+  <script src="/assets/team.min.js?v4.0.2"></script>
+<% end %>
 <div class="page">
   <div class="page-content container-fluid">
     <div class="row" data-plugin="matchHeight" data-by-row="true">
