--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,6 @@
     <link rel="stylesheet" href="/assets/bootstrap-extend.min.css">
     <link rel="stylesheet" href="/assets/site.min.css">
 
-    <!-- Plugins -->
-    <link rel="stylesheet" href="/assets/plugins/animsition.css">
-    <link rel="stylesheet" href="/assets/plugins/asScrollable.css">
-    <link rel="stylesheet" href="/assets/plugins/switchery.css">
-    <link rel="stylesheet" href="/assets/plugins/introjs.css">
-    <link rel="stylesheet" href="/assets/plugins/slidePanel.css">
-    <link rel="stylesheet" href="/assets/plugins/flag-icon.css">
-    <link rel="stylesheet" href="/assets/plugins/chartist.css">
-    <link rel="stylesheet" href="/assets/plugins/jquery-jvectormap.css">
-    <link rel="stylesheet" href="/assets/plugins/chartist-plugin-tooltip.css">
     <%= yield :head %>
 
     <!-- Fonts -->
@@ -75,40 +65,6 @@
     <script src="/assets/jquery-asScrollbar.js"></script>
     <script src="/assets/jquery-asScrollable.js"></script>
     <script src="/assets/jquery-asHoverScroll.js"></script>
-    
-    <!-- Plugins -->
-    <script src="/assets/switchery.js"></script>
-    <script src="/assets/intro.js"></script>
-    <script src="/assets/screenfull.js"></script>
-    <script src="/assets/jquery-slidePanel.js"></script>
-    <script src="/assets/skycons.js"></script>
-    <script src="/assets/chartist.min.js"></script>
-    <script src="/assets/chartist-plugin-tooltip.js"></script>
-    <script src="/assets/jquery-asPieProgress.min.js"></script>
-    <script src="/assets/jquery-jvectormap.min.js"></script>
-    <script src="/assets/jquery-jvectormap-au-mill-en.js"></script>
-    <script src="/assets/jquery.matchHeight-min.js"></script>
-
-    <!-- Plugins for this page -->
-    <%= yield :plugins %>
-    
-    <!-- Scripts -->
-    <script src="/assets/Component.js"></script>
-    <script src="/assets/Plugin.js"></script>
-    <script src="/assets/Base.js"></script>
-    <script src="/assets/Config.js"></script>
-    
-    <script src="/assets/Section/Menubar.js"></script>
-    <script src="/assets/Section/GridMenu.js"></script>
-    <script src="/assets/Section/Sidebar.js"></script>
-    <script src="/assets/Section/PageAside.js"></script>
-    <script src="/assets/Plugin/menu.js"></script>
-    
-    <script src="/assets/config/colors.js"></script>
-    <script src="/assets/config/tour.js"></script>
-    <script>Config.set('assets', '/assets');</script>
-    
-    <!-- Page Scripts -->
-    <%= yield :page_scripts %>
+    <%= yield :scripts %>
   </body>
 </html>
